--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+os: windows
 language: python
 python:
   - "3.6"
@@ -5,3 +6,4 @@ python:
 install:
   - "pip install pytest"
 script: python -m pytest tests/
+
